WaitForMultipleObjects() return value not handled appropriately

XMLWordPrintable

    • b17
    • windows

        There are two valid return values from WaitForMultipleObjects() which
        indicate that a mutex object was successfully obtained, WAIT_OBJECT_0 and
        WAIT_ABANDONED. WAIT_ABANDONED is not being handled appropriately in
        j2se/src/windows/transport/shmem/shmem_md.c, i.e., the thread may never
        release the mutex, which can result in other threads remaining blocked.

              Assignee:
              Aleksej Efimov
              Reporter:
              Abhijit Saha
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: