8032901: WaitForMultipleObjects() return value not handled appropriately

Reviewed-by: dholmes, sla